@@ -328,7 +328,7 @@ public class AirUtils {
         final List<Integer> extraRemoval = reminders.stream()
             .filter((reminder) -> reminder.getReminder_date().isAfter(plusTwoDays))
             .map(Reminder::getId)
-            .collect(Collectors.toList());
+            .toList();
 
         toPurge.addAll(extraRemoval);
 
